2010-04-26  Chris Dunlap  <cdunlap@llnl.gov>

	* : Updated homepage URL.

2010-03-23  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.5.9.

	* HISTORY, META, NEWS: Updated for 0.5.9 release.

	* PLATFORMS: Added kernel release info for GNU/kFreeBSD.

	* config/x_ac_select_auth_method.m4, PLATFORMS: Renamed Solaris
	  references to SunOS in order to be consistent with uname output.

	* config/config.guess, config/config.sub:
	  Updated via autotools-dev-20100122.1.

	* src/etc/munge.sysconfig: Removed svn id keyword.

	* Makefile.am, src/Makefile.am, src/etc/Makefile.am,
	  src/libcommon/Makefile.am, src/libmissing/Makefile.am,
	  src/libmunge/Makefile.am, src/munge/Makefile.am,
	  src/munged/Makefile.am, config/Make-inc.mk:
	  Added copyleft boilerplate.

2010-03-16  Chris Dunlap  <cdunlap@llnl.gov>

	* PLATFORMS: Updated.

	* README: Added license info.

2010-03-15  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_select_auth_method.m4: Tweaked platform comment for
	  AUTH_METHOD_LOCAL_PEERCRED.

2010-03-11  Chris Dunlap  <cdunlap@llnl.gov>

	* configure.ac: Tweaked formatting.

	* config/x_ac_select_auth_method.m4: Tweaked platform comment for
	  AUTH_METHOD_LOCAL_PEERCRED.

	* config/x_ac_select_auth_method.m4: Fixed check for struct xucred to
	  work on FreeBSD-4.7 with the addition of <sys/param.h> and
	  <sys/types.h>.

2010-03-10  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_check_fifo_recvfd.m4, config/x_ac_check_so_peercred.m4:
	  Tweaked formatting.

	* configure.ac: Fixed check for socklen_t to work on FreeBSD-4.7 with
	  the addition of <sys/types.h>.
	* config/x_ac_check_local_peercred.m4, src/munged/auth_recv.c:
	  Added <sys/un.h> for LOCAL_PEERCRED define on FreeBSD-4.7.
	  Added <sys/param.h> for NGROUPS on FreeBSD-4.7 (needed for ucred.h).
	  Note that, by default, AUTH_METHOD_GETPEEREID is selected on FreeBSD;
	  however, AUTH_METHOD_LOCAL_PEERCRED also works there since supposedly
	  its getpeereid() is implemented via LOCAL_PEERCRED.
