@@ -1,3 +1,8 @@
+2010-05-19  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* README, src/libcommon/munge.7.in: Updated overview text,
+	  breaking OVERVIEW section into USAGE and DETAILS.
+
 2010-04-26  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* : Updated homepage URL.
